Update brand tagline to 'Murah • Lengkap • Luas'

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="logo-ws.jpeg" alt="Logo TOSERBA WS PEDAK" class="logo">
                     <div class="brand-info">
                         <h1 class="brand-name">TOSERBA WS PEDAK</h1>
-                        <p class="brand-tagline">Toko Grosir Terpercaya</p>
+                        <p class="brand-tagline">Murah • Lengkap • Luas</p>
                     </div>
                 </div>
                 <nav class="header-nav">
