Update operational hours to daily 08:00 - 19:00

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m4.2 14.2L11 13V7h1.5v5.2l4.5 2.7l-.8 1.3Z" fill="#FFFFFF"/>
                         </svg>
-                        <span>Jam Operasional: Senin-Sabtu 08:00-20:00, Minggu 08:00-17:00</span>
+                        <span>Jam Operasional: Setiap hari 08:00 - 19:00</span>
                     </div>
                 </div>
                 
